# AnoPKI-Community

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  EDITION.md  README.md  SECURITY.md
.edition/: edition.json
.github/workflows/: ci.yml  release.yml
docs/: INDEX.md  ROADMAP.md  acme-client-compatibility.md  acme-rfc8555-conformance.md
docs-pack/: README.md
docs/adr/: 0001-ca-backend-selection.md  0002-acme-adoption.md  0003-hsm-kms-strategy.md  0004-license-change-to-mpl-2.0.md  0005-project-rename-to-anopki.md  0006-crypto-backend-direction-anocrypto.md  0007-key-provider-signing-boundary.md
docs/architecture/: pki-context.md
docs/edition/: community-edition.md  edition-boundary.md
docs/operations/: backup-restore-runbook.md  key-ceremony.md
docs/policy/: algorithm-policy.md  certificate-profiles.md  cp-cps-map.md
docs/reference/: api-errors.md  api-surface-status.md  audit-metadata.md  compliance-matrix.md  core-boundary-integration.md  core-cli-contract.md  crypto-backend-parity.md  crypto-backend-strategy.md  documentation-governance.md  fuzzing.md  improvement-analysis-alignment.md  issuance-consistency.md  observability.md  openapi.json  project-identity-and-license.md  project-scope.md  release-candidate-v0.1.0-alpha.0.md  release-evidence.md  release-readiness-action-plan.md  source-file-header-policy.md  state-transitions.md  target-architecture.md  webhook-receivers.md
docs/runbooks/: anopki-rename-migration.md  bootstrap-api-key.md  incident-response.md  manual-demo.md  production-deployment.md  production-hardening-checklist.md  production-recovery.md  public-tls-readiness.md  release-process.md  webhook-outbox-safety.md
docs/security/: access-model.md  audit-log-schema.md  audit-tamper-evidence.md  key-provider-semantics.md  siem-detections.md  threat-model.md
include/anopki/: version.hpp
include/anopki/core/: crl.hpp  csr.hpp  issue.hpp  ocsp.hpp
include/anopki/crypto/: backend.hpp  runtime.hpp
scripts/: generate-release-metadata.py  security-baseline-scan.py  test_generate_release_metadata.py  test_security_baseline_scan.py  test_validate_community_boundary.py  test_validate_core_cli_contracts.py  test_validate_docs.py  test_validate_key_provider_boundary.py  test_validate_release_artifacts.py  test_validate_release_evidence.py  test_validate_service_contracts.py  test_validate_version_metadata.py  test_verify_audit_hash_chain.py  test_verify_audit_integrity_drill.py  test_verify_audit_replay_drill.py  test_verify_authorization_boundary.py  test_verify_go_release.py  test_verify_issuer_rollover_drill.py  test_verify_local.py  test_verify_multi_node_reliability.py  test_verify_postgres_multi_node_failover.py  test_verify_postgres_recovery_drill.py  test_verify_recovery_drill.py  test_verify_status_outage_drill.py  test_webhook_receiver_verification.py  validate-community-boundary.py  validate-core-cli-contracts.py  validate-docs.py  validate-key-provider-boundary.py  validate-release-artifacts.py  validate-release-evidence.py  validate-service-contracts.py  validate-version-metadata.py  verify-audit-hash-chain.py  verify-audit-integrity-drill.py  verify-audit-replay-drill.py  verify-authorization-boundary.py  verify-go-release.py  verify-issuer-rollover-drill.py  verify-local.ps1  (+6 more)
scripts/acme-smoke/: README.md  acme-https-proxy.go  run-certbot-smoke.ps1  test-run-certbot-smoke.ps1
service/: README.md  go.mod
service/cmd/anopki-service/: key_provider.go  key_provider_test.go  main.go  main_test.go
service/internal/corecli/: backend_info.go  backend_info_test.go  runner.go  runner_integration_test.go  runner_test.go
service/internal/domain/: errors.go  types.go
service/internal/httpapi/: acme.go  metrics.go  nonce_sql.go  request_authorizer_audit_test.go  request_authorizer_hardening_test.go  server.go  server_test.go
service/internal/keyref/: keyref.go  keyref_test.go  provider.go  provider_test.go
service/internal/lifecycle/: caa.go  caa_test.go  expiration_scan_worker.go  expiration_scan_worker_test.go  outbox_dispatcher.go  outbox_dispatcher_test.go  outbox_events_test.go  outbox_handler.go  outbox_handler_test.go  outbox_worker.go  outbox_worker_test.go  postgres_multi_node_failover_test.go  service.go  service_test.go  webhook_handler.go  webhook_handler_test.go
service/internal/observability/: metrics.go
service/internal/store/: audit_chain_integration_test.go  audit_hash.go  audit_hash_test.go  audit_integrity_test.go  memory.go  memory_test.go  migrate.go  migrate_test.go  outbox_test.go  postgres_parity_test.go  postgres_recovery_test.go  sqlstore.go  sqlstore_acme.go  sqlstore_audit.go  sqlstore_certificate.go  sqlstore_outbox.go  store.go
service/internal/store/migrations/: 0001_init.sql  0001_init_sqlite.sql  0002_audit_hash_chain.sql  0002_audit_hash_chain_sqlite.sql
src/: version.cpp  version_config.hpp.in
src/backends/openssl/: crl.cpp  csr.cpp  issue.cpp  ocsp.cpp  openssl_backend.cpp  openssl_backend.hpp  openssl_backend_config.hpp.in
src/backends/openssl/key_providers/: file_key_provider.cpp  file_key_provider.hpp  provider_resolver.cpp  provider_resolver.hpp
src/cli/: main.cpp
src/core/: backend.cpp  crl.cpp  csr.cpp  issue.cpp  ocsp.cpp  openssl_backend.hpp  runtime.cpp
tests/: backend_profile_test.cpp  core_cli_contract_test.cpp  core_crl_test.cpp  core_issue_profile_test.cpp  core_ocsp_test.cpp  core_openssl_golden_test.cpp  crl_file_key_provider_test.cpp  crypto_backend_interface_test.cpp  file_key_provider_test.cpp  ocsp_file_key_provider_test.cpp  software_token_key_provider_test.cpp  version_test.cpp
tests/fixtures/backend-parity/: README.md  manifest.txt
tests/fixtures/ocsp/: README.md  manifest.json
tests/fixtures/openssl-baseline/: README.md  expected.txt
tests/fuzz/: core_parser_fuzz.cpp
